# vectis

./: .gitignore  .travis.yml  COPYING  Makefile.am  README  README.md  TODO  configure.ac  run
debian/: .gitignore  changelog  control  copyright  rules  vectis.install  watch
scripts/: vectis.in
t/: ci-Dockerfile.in  ci-build.sh  ci-install.sh  config.py  mypy.sh  pycodestyle.sh  pyflakes.sh  shellcheck.sh
t/debian/: autopkgtest.t  bootstrap.t  new.t  sbuild_tarball.t
t/manual/: bootstrap.t  debian.t  new.t  sbuild_tarball.t
t/ubuntu/: new.t
vectis/: __init__.py  __main__.py  apt.py  autopkgtest.py  config.py  debuild.py  defaults.yaml  error.py  lxc.py  piuparts.py  setup-testbed  util.py  vectis-command-wrapper  virt.py  worker.py
vectis/commands/: __init__.py  autopkgtest.py  bootstrap.py  lxc_tarballs.py  lxd_tarball.py  minbase_tarball.py  new.py  pbuilder.py  pbuilder_tarball.py  piuparts.py  run.py  sbuild.py  sbuild_tarball.py
vectis/keys/: buildd.debian.org_archive_key_2015_2016.gpg  buildd.debian.org_archive_key_2017_2018.gpg
